# openGL

./: CMakeLists.txt  README.md  main.cpp
Shaders/: 3.2.2.point_shadows.fs  3.2.2.point_shadows.vs  multiple_lights.fs  shader_3d.vert  shader_light.frag  shader_light.vert  shader_scale.vert  snow_shader.vs
include/: GameFrame .h  ft2build.h  mesh.cpp  mesh.h  model.h  shader_s.h  stb_image.h
include/GLFW/: glfw3.h  glfw3native.h
include/UI/: GUI.h  TextEditor.h
include/assimp/: Base64.hpp  BaseImporter.h  Bitmap.h  BlobIOSystem.h  ByteSwapper.h  ColladaMetaData.h  CreateAnimMesh.h  DefaultIOStream.h  DefaultIOSystem.h  DefaultLogger.hpp  Exceptional.h  Exporter.hpp  GenericProperty.h  GltfMaterial.h  Hash.h  IOStream.hpp  IOStreamBuffer.h  IOSystem.hpp  Importer.hpp  LineSplitter.h  LogAux.h  LogStream.hpp  Logger.hpp  MathFunctions.h  MemoryIOWrapper.h  NullLogger.hpp  ObjMaterial.h  ParsingUtils.h  Profiler.h  ProgressHandler.hpp  RemoveComments.h  SGSpatialSort.h  SceneCombiner.h  SkeletonMeshBuilder.h  SmallVector.h  SmoothingGroups.h  SmoothingGroups.inl  SpatialSort.h  StandardShapes.h  StreamReader.h  (+44 more)
include/glad/: glad.h
include/imgUI/: imconfig.h  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_opengl3_loader.h  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp  imstb_rectpack.h  imstb_textedit.h  imstb_truetype.h
include/learnopengl/: camera.h  filesystem.h  model.h  shader.h  shader_c.h  shader_m.h  shader_s.h  shader_t.h
resources/shader/: fragment.fs  fragment.glsl  vertex.fs  (+2 more)
src/: Particle.cpp  glad.c
test/: main.cpp
(+29 files in other folders)
